# snxlib

./: CMakeLists.txt  LICENSE  README.md  snxlib.c
includes/: snxlib.h
